--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
         "react-icons": "^5.0.1",
         "react-leaflet": "^4.2.1",
         "react-tsparticles": "^2.12.2",
+        "tsparticles": "^3.9.1",
         "tsparticles-slim": "^2.12.0"
     },
     "devDependencies": {
