--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.13.5",
         "framer-motion": "^11.0.0",
         "leaflet": "^1.9.4",
         "next": "^14.1.0",
