--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,14 @@
     "dependencies": {
         "axios": "^1.13.5",
         "framer-motion": "^11.0.0",
+        "i18next": "^25.8.12",
+        "i18next-browser-languagedetector": "^8.2.1",
+        "i18next-http-backend": "^3.0.2",
         "leaflet": "^1.9.4",
         "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^16.5.4",
         "react-icons": "^5.0.1",
         "react-leaflet": "^4.2.1",
         "react-tsparticles": "^2.12.2",
