--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.57.4",
         "axios": "^1.13.5",
         "framer-motion": "^11.0.0",
         "i18next": "^25.8.12",
